[gd_scene load_steps=3 format=3 uid="uid://gth21bnt7id"]

[ext_resource type="Script" uid="uid://dewwbchfua38n" path="res://Scenes/Fases/saeb_quest.gd" id="1_bjkc3"]
[ext_resource type="Texture2D" uid="uid://cpxlxldo3gajs" path="res://Assets/Art/inventory-background.png" id="1_pqdmb"]

[node name="Saeb_quest" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_bjkc3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 502.0
offset_bottom = -224.0
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 503.0
offset_bottom = 426.0
texture = ExtResource("1_pqdmb")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Label" type="Label" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Uma praça quadrada, que possui o perímetro de 24 metros,
 tem uma árvore próxima de cada vértice e fora dela. 
Deseja-se aumentar a área da praça, alterando-se sua
 forma e mantendo as árvores externas a ela, conforme
 ilustra a figura.

O novo perímetro da praça é:"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 194.0
offset_right = 115.0
offset_bottom = 365.0

[node name="ButtonA" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "A) 24 Metros"

[node name="ButtonB" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "B) 32 Metros"

[node name="ButtonC" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "C) 36 Metros"

[node name="ButtonD" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "D) 40 Metros"

[node name="ButtonE" type="Button" parent="Panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "E) 64 Metros"

[node name="Label2" type="Label" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 19.0
offset_top = 377.0
offset_right = 456.0
offset_bottom = 400.0

[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonA" to="." method="_on_button_a_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonB" to="." method="_on_button_b_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonC" to="." method="_on_button_c_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonD" to="." method="_on_button_d_pressed"]
[connection signal="pressed" from="Panel/NinePatchRect/VBoxContainer/ButtonE" to="." method="_on_button_e_pressed"]
